--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-backup": "*"
+        "spatie/laravel-backup": "^8.1",
+        "wnx/laravel-backup-restore": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
